fixed prefooter spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ aside {
 
 .content aside > p {
 	box-sizing: border-box;
-	margin-top: 31px;
+	margin-top: 30px;
 	margin-left: 0;
 	padding-left: 0;
 }
